fix lightning unicode character

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -22,7 +22,7 @@
       class="ms-4 text-warning"
       [matBadge]="statistic.streak"
       matBadgeOverlap="false"
-      ><strong>🗲</strong></span
+      ><strong>ϟ</strong></span
     >
   </ng-container>
   <mat-radio-group [(ngModel)]="selectedAnswer">
